--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
+  transition: all 0.5s;
 }
 
 body {
@@ -13,31 +14,36 @@ body .container {
 #header {
   background: #4681B4;
   color: white;
-  padding: calc(calc(200px / 4) / 2);
+  padding: calc(calc(150px / 4) / 2);
 }
 
-#buttons {
+#nav {
   background: white;
   color: #4681B4;
 }
-#buttons .btn {
+#nav .btn {
   color: #4681B4;
   font-size: 1.2em;
 }
-#buttons .btn:focus, #buttons .btn .btn:active {
+#nav .btn:focus, #nav .btn .btn:active {
   box-shadow: none;
 }
 
 .square-row {
-  margin: calc(200px / 4) 0;
+  margin: calc(150px / 4) 0;
 }
 .square-row .square {
   background: red;
   cursor: pointer;
-  height: 200px;
+  height: 150px;
   margin: 0;
   padding: 0;
-  width: 200px;
+  width: 150px;
+}
+
+.active, .btn:hover {
+  background: #4681B4;
+  color: white !important;
 }
 
 /*# sourceMappingURL=style.css.map */
